--- a/Agustin-styles.css
+++ b/Agustin-styles.css
@@ -1,3 +1,47 @@
 body {
     background-color: rgb(236, 236, 236);
+    font: 16px Helvetica, Sans-Serif;
+}
+
+h2 {
+    border-bottom: 1px solid #999;
+    padding: 0 0 16px 0;
+}
+
+a { 
+    color: #999;
+    text-decoration: none; 
+    border-bottom: 1px dotted #999; 
+}
+
+.main {
+    width: 800px; 
+    margin: 40px auto 60px;
+    line-height: 24px;
+}
+
+p { 
+    margin: 0 0 16px 0; 
+}
+
+.description { 
+    width: 500px; 
+    float: left; 
+}
+        
+.description p { 
+    font-family: Georgia, Serif; 
+    font-style: italic; 
+    color: #666; 
+}
+
+.image-profile { 
+    float: right; 
+    margin: 0 0 0 10px;
+    border-radius: 15px;
+}
+
+.info-icon {
+    font-size: 20px;
+    text-align: center;
 }
