--- a/Agustin-styles.css
+++ b/Agustin-styles.css
@@ -1,3 +1,8 @@
+* { 
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(236, 236, 236);
     font: 16px Helvetica, Sans-Serif;
@@ -44,4 +49,48 @@ p {
 .info-icon {
     font-size: 20px;
     text-align: center;
+}
+
+.space { 
+    clear: both; 
+}
+
+dt { 
+    font-style: italic; 
+    font-weight: bold; 
+    font-size: 18px; 
+    text-align: right; 
+    padding: 0 26px 0 0; 
+    width: 150px; 
+    float: left; 
+    height: 100px; 
+    border-right: 1px solid #999;  
+}
+        
+dd { 
+    width: 600px; 
+    float: right; 
+}
+        
+dd.space { 
+    float: none; 
+    margin: 0; 
+    height: 15px; 
+}
+
+h3 { 
+    font-size: 20px;
+    margin: 0 0 6px 0;
+    position: relative;
+}
+        
+h3 span {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    font-style: italic;
+    font-family: Georgia, Serif;
+    font-size: 16px;
+    color: #999;
+    font-weight: normal;
 }
