--- a/Agustin-styles.css
+++ b/Agustin-styles.css
@@ -52,7 +52,12 @@ p {
 }
 
 .space { 
-    clear: both; 
+    clear: both;    
+    border-bottom: 1px solid #999;
+    margin: 15px;
+    width: 100%;
+    float: none;
+    height: 15px;
 }
 
 dt { 
@@ -63,19 +68,12 @@ dt {
     padding: 0 26px 0 0; 
     width: 150px; 
     float: left; 
-    height: 100px; 
-    border-right: 1px solid #999;  
+    height: 100px;
 }
         
 dd { 
     width: 600px; 
-    float: right; 
-}
-        
-dd.space { 
-    float: none; 
-    margin: 0; 
-    height: 15px; 
+    float: right;
 }
 
 h3 { 
@@ -93,4 +91,8 @@ h3 span {
     font-size: 16px;
     color: #999;
     font-weight: normal;
+}
+
+ul { 
+    margin: 0 0 32px 17px; 
 }
